application/terrafrom/nat-gw.tf
resource "aws_eip" "nat_eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_1.id # Placed in Public Subnet 1

  tags = { Name = "main-nat-gw" }
}
