application/terrafrom/vpc.tf
resource "aws_vpc" "restaurant_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "restaurant_vpc"
  }
}
